// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.polling.contracts.service;

option java_multiple_files = true;
import "io/harness/polling/contracts/polling_item.proto";

service PollingFrameworkService {
  rpc subscribe(io.harness.polling.contracts.PollingItem) returns (PollingDocument);
  rpc unsubscribe(io.harness.polling.contracts.PollingItem) returns (PollingResponse);
}

message PollingDocument {
  string pollingDocId = 1;
}

message PollingResponse {
  bool subscriptionStatus = 1;
}
